--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,11 @@
       <nav class="untree_co--site-nav dark js-sticky-nav">
         <div class="container d-flex align-items-center">
           <div class="logo-wrap">
-            <a href="index.html" class="untree_co--site-logo">LuxuryHotel</a>
+            <a href="home.html" class="untree_co--site-logo">Visitors Hotel</a>
           </div>
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
             <ul class="site-nav-ul js-clone-nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="home.html">Home</a></li>
               <li class="has-children">
                 <a href="rooms.html">Rooms</a>
                 <ul class="dropdown">
@@ -172,15 +172,15 @@
                 <div class="col-md-4 ml-auto"  data-aos="fade-up" data-aos-delay="200">
                   <div class="media-29190">
                     <span class="label">Email</span>
-                    <p><a href="#">info@Untree.co</a></p>
+                    <p><a href="#">visitors@gmail.com</a></p>
                   </div>
                   <div class="media-29190">
                     <span class="label">Phone</span>
-                    <p><a href="#">+30 931 3829 399</a></p>
+                    <p><a href="#">+256 706732078</a></p>
                   </div>
                   <div class="media-29190">
                     <span class="label">Address</span>
-                    <p>273 South Riverview Rd. New York, NY 10011</p>
+                    <p>273 Naboa Road ,Mbale City</p>
                   </div>
                   <div class="media-29190">
                     <span class="label">Social</span>
@@ -210,7 +210,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3 class="m-0 p-0">If you have any special requests, please feel free to call us. <a href="tel://+123456789012">+12.345.678.9012</a></h3>
+                <h3 class="m-0 p-0">If you have any special requests, please feel free to  <a href="contact.html">Contact Us </a></h3>
               </div>
             </div>
           </div>
@@ -231,25 +231,25 @@
                 <div class="col-md-3">
                   <h3>Navigation</h3>
                   <ul class="list-unstyled">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Rooms</a></li>
-                    <li><a href="#">Amenities</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="rooms.html">Rooms</a></li>
+                    <li><a href="amenities.html">Amenities</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                   </ul>
                 </div>
                 <div class="col-md-9 ml-auto">
                   <div class="row mb-3">
                     <div class="col-md-6">
                       <h3>Address</h3>
-                      <address>273 South Riverview Rd. <br> New York, NY 10011</address>
+                      <address>273 Naboa Rd. <br> Mbale City</address>
                     </div>
                     <div class="col-md-6">
                       <h3>Telephone</h3>
                       <p>
-                        <a href="#">+1 234 5678 910</a> <br>
-                        <a href="#">+2 234 5678 910</a>
+                        <a href="#">+256 706732078</a> <br>
+                        <a href="#">+256 782308688</a>
                       </p>
                     </div>
                   </div>
@@ -271,7 +271,7 @@
             <div class="col-md-6 text-md-left">
               <!-- Link back to Untree.co can't be removed. Template is licensed under CC BY 3.0. If you purchased a license you can remove this. -->
               <p>
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a>
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="home.html">Visitors.com</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Visitors.com</a>
               </p>
             <!-- Link back to Untree.co can't be removed. Template is licensed under CC BY 3.0. If you purchased a license you can remove this. -->
             </div>
