--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>LuxuryHotel Free HTML Template by Untree.co</title>
+    <title>Visitors Hotel</title>
   </head>
   <body>
     
@@ -59,11 +59,11 @@
       <nav class="untree_co--site-nav dark js-sticky-nav">
         <div class="container d-flex align-items-center">
           <div class="logo-wrap">
-            <a href="index.html" class="untree_co--site-logo">LuxuryHotel</a>
+            <a href="home.html" class="untree_co--site-logo">Visitors Hotel</a>
           </div>
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
             <ul class="site-nav-ul js-clone-nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="home.html">Home</a></li>
               <li class="has-children">
                 <a href="rooms.html">Rooms</a>
                 <ul class="dropdown">
@@ -128,7 +128,7 @@
             <div class="row align-items-center">
               <div class="col-md-9">
                 <div class="site-hero-contents" data-aos="fade-up">
-                  <h1 class="hero-heading">About Luxury Hotel</h1>
+                  <h1 class="hero-heading">About Visitors Hotel</h1>
                   <div class="sub-text w-75">
                     <p>Facilities provided may range from a modest-quality mattress in a small room to large suites with bigger.</p>
                   </div>
@@ -184,7 +184,7 @@
               <div class="col-md-9">
                 <div class="row mb-5 align-items-center">
                   <div class="col-md-5 mr-auto">
-                    <h2 class="display-4">Watch LuxuryHotel Video</h2>
+                    <h2 class="display-4">Watch Visitors Hotel Video</h2>
                   </div>
                   <div class="col-md-7 ml-auto">
                      <p>Higher-quality beds, a dresser, a refrigerator and other kitchen facilities, upholstered chairs, a flat screen television, and en-suite bathrooms. Small, lower-priced hotels may offer only the most basic guest services and facilities. </p>
@@ -205,7 +205,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3 class="m-0 p-0">If you have any special requests, please feel free to call us. <a href="tel://+123456789012">+12.345.678.9012</a></h3>
+                <h3 class="m-0 p-0">If you have any special requests, please feel free to  <a href="contact.html">Contact Us</a></h3>
               </div>
             </div>
           </div>
@@ -226,25 +226,25 @@
                 <div class="col-md-3">
                   <h3>Navigation</h3>
                   <ul class="list-unstyled">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Rooms</a></li>
-                    <li><a href="#">Amenities</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="rooms.html">Rooms</a></li>
+                    <li><a href="amenities.html">Amenities</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                   </ul>
                 </div>
                 <div class="col-md-9 ml-auto">
                   <div class="row mb-3">
                     <div class="col-md-6">
                       <h3>Address</h3>
-                      <address>273 South Riverview Rd. <br> New York, NY 10011</address>
+                      <address>Naboa Road, Mbale City</address>
                     </div>
                     <div class="col-md-6">
                       <h3>Telephone</h3>
                       <p>
-                        <a href="#">+1 234 5678 910</a> <br>
-                        <a href="#">+2 234 5678 910</a>
+                        <a href="#">+256 706732078</a> <br>
+                        <a href="#">+256 782308688</a>
                       </p>
                     </div>
                   </div>
@@ -266,7 +266,7 @@
             <div class="col-md-6 text-md-left">
               <!-- Link back to Untree.co can't be removed. Template is licensed under CC BY 3.0. If you purchased a license you can remove this. -->
               <p>
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a>
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="home.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">visitors.com</a>
               </p>
             <!-- Link back to Untree.co can't be removed. Template is licensed under CC BY 3.0. If you purchased a license you can remove this. -->
             </div>
