--- a/about.html
+++ b/about.html
@@ -144,7 +144,6 @@
 
             <div class="row justify-content-center text-center pt-0 pb-5">  
               <div class="col-lg-6 section-heading" data-aos="fade-up">
-                <h3 class="text-center">The Management</h3>
               </div>
             </div>
             
@@ -155,7 +154,7 @@
               <div class="col-md-8">
                 <div class="row justify-content-center">
                   <div class="col-md-10">
-                    <h3 class="mb-4" data-aos="fade-up">Philosophy</h3>
+                    <h3 class="mb-4" data-aos="fade-up">Our history</h3>
                     <div class="row">
                       <div class="col-md-6" data-aos="fade-up">
                         
@@ -195,7 +194,9 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-                <img src="images/slider_2.jpg" alt="Image" class="img-fluid">
+                <video width="100%" height="auto" class="image-fluid" poster="images/slider_1.jpg" controls>
+                  <source src="video01.mp4" type="video/mp4">
+                </video>
               </div>
             </div>
           </div>
