worked on files

--- a/home.html
+++ b/home.html
@@ -75,7 +75,12 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
-            
+          <div class="icons-wrap text-md-right">
+            <!-- Mobile Toggle -->
+            <a href="#" class="d-block d-lg-none burger js-menu-toggle" data-toggle="collapse" data-target="#main-navbar">
+              <span></span>
+            </a>
+          </div> 
           
         </div>
       </nav>
