worked on booking form

--- a/home.html
+++ b/home.html
@@ -162,7 +162,7 @@
                 <div class="suite-excerpt">
                   <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality mattress in a small room to large suites with bigger.</p>
                   <p><a href="rooms02.html" class="readmore">Room Details</a></p>
-                  <p><a href="" class="readmore">Book Now</a></p>
+                  <p><a href="booking03.html" class="readmore">Book Now</a></p>
                 </div>
               </div>
             </div>
@@ -187,7 +187,7 @@
                 <div class="suite-excerpt pr-5">
                   <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality mattress in a small room to large suites with bigger</p>
                   <p><a href="rooom01.html" class="readmore">Room Details</a></p>
-                   <p><a href="" class="readmore">Book Now</a></p>
+                   <p><a href="booking03.html" class="readmore">Book Now</a></p>
 
                 </div>
               </div>
@@ -213,7 +213,7 @@
                 <div class="suite-excerpt">
                   <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality mattress in a small room to large suites with bigger.</p>
                   <p><a href="rooms03.html" class="readmore">Room Details</a></p>
-                  <p><a href="" class="readmore">Book Now</a></p>
+                  <p><a href="booking03.html" class="readmore">Book Now</a></p>
 
                 </div>
               </div>
