--- a/rooms.html
+++ b/rooms.html
@@ -136,7 +136,7 @@
                       </div>
                     </div>
                     <div class="post-entry-contents">
-                      <p><a href="#" class="readmore">Book Now</a></p>
+                      <p><a href="booking03.html" class="readmore">Book Now</a></p>
                     </div>
 
                   </div>
@@ -178,7 +178,7 @@
                       </div>
                     </div>
                     <div class="post-entry-contents">
-                      <p><a href="#" class="readmore">Book Now</a></p>
+                      <p><a href="booking03.html" class="readmore">Book Now</a></p>
                     </div>
                   </div>
                 </div>
@@ -218,7 +218,7 @@
                       </div>
                     </div>
                     <div class="post-entry-contents">
-                      <p><a href="#" class="readmore">Book Now</a></p>
+                      <p><a href="booking03.html" class="readmore">Book Now</a></p>
                     </div>
 
                   </div>
@@ -258,7 +258,7 @@
                       </div>
                     </div>
                     <div class="post-entry-contents">
-                      <p><a href="#" class="readmore">Book Now</a></p>
+                      <p><a href="booking03.html" class="readmore">Book Now</a></p>
                     </div>
                   </div>
                 </div>
