--- a/rooms02.html
+++ b/rooms02.html
@@ -126,7 +126,7 @@
                         </div>
                       </div>
                       <div class="post-entry-contents">
-                        <p><a href="#" class="readmore">Book Now</a></p>
+                        <p><a href="booking03.html" class="readmore">Book Now</a></p>
                       </div>
                     </div>
                   </div>
